# grafter

./: .gitignore  CMakeLists.txt  env.h  kernel.cu  main.cpp
assets/: grafter.rc  index.html
calculate/: graph.h  scaler.h
calculate/commands/: __init.h  command.h  comp.h  const.h
calculate/commands/complex/: utils.h  visual.h
calculate/commands/draw/: explicit.h  implicit.h  implicitAutoFill.h  implicit_polar.h  rgb2D.h
calculate/commands/real/: abs.h  add.h  diff.h  div.h  intf.h  log.h  mul.h  pow.h  sub.h  trigonometric.h
gui/: wingui.h
images/: draw.h
scripts/: build.bat  build.py
server/: assets.h  server.h
utils/: assets.h  formats.h  utils.h
utils/device/: cpu.h  device.h
utils/parsers/: cgc.h  formulaParser.h  jsonParser.h
